--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -64,7 +64,7 @@
     "space-infix-ops": "warn",
     "spaced-comment": ["warn", "always"],
     "vars-on-top": "error",
-    "yoda": "error"
+    "yoda": ["error", {"exceptRange": true}]
   },
   "parserOptions": {
     "ecmaVersion": "latest",
